# WebView2App

./: CMakeLists.txt  README.md
cmake/: WebView2.cmake
resources/: index.html  script.js  style.css
resources/js/: engine.js
src/: main.cpp
src/ui/: ui.h  window.cpp  window.h
src/ui/handlers/: js.hpp  resource.hpp
